# TSLogic

./: EngineLogic.hpp  README.md
Animation/: Animation.cpp  Animation.hpp
Barriers/: Barriers.cpp  Barries.hpp
CentralStuff/: CoreFunctions.hpp  GlobalVariables.hpp  Random.hpp  TypeDefs.hpp
Enemy/BasicEnemy/: BasicEnemy.cpp  BasicEnemy.hpp
Enemy/Core/: Enemy.cpp  Enemy.hpp
Enemy/IntelligentEnemy/: IntelligentEnemy.cpp  IntelligentEnemy.hpp
Entity/: Entity.cpp  Entity.hpp
Examples/: CMakeLists.txt  TestLogic.cpp
Examples/Levels/: Level2.json  Test.json
Examples/TestLogic/: CMakeLists.txt  TestLogic.cpp
Gate/: Gate.cpp  Gate.hpp
Level/: Level.cpp  Level.hpp
LevelParser/: LevelParser.cpp  LevelParser.hpp
Player/: Player.cpp  Player.hpp
Player/Camera/: Camera.cpp  Camera.hpp
Player/EventHandler/: EventHandler.cpp  EventHandler.hpp
ResourceManager/: ResourceManager.cpp  ResourceManager.hpp
SmartRect/: SmartRect.cpp  SmartRect.hpp
TSLogic/: TSLogic.hpp
TileMap/: TileMap.cpp  TileMap.hpp
